samples/_failures_safe/1761342686_82798e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9b4af23.c: In function ‘main’:
./samples/SAFE/__tmp_a9b4af23.c:137:5: error: expected declaration or statement at end of input
  137 |     printf("\nFiltered entries for %s:\n", level_to_string(filter_level));
      |     ^~~~~~
